[project]
name = "ma-frozenlake"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dm-tree>=0.1.9",
    "gymnasium>=1.2.2",
    "lz4>=4.4.5",
    "numpy>=2.3.4",
    "pettingzoo>=1.25.0",
    "pydantic>=2.12.4",
    "pygame>=2.6.1",
    "ray[tune]>=2.51.1",
    "scipy>=1.16.3",
    "torch>=2.9.0",
]

[dependency-groups]
dev = [
    "line-profiler>=5.0.0",
]
